<resources>
    <string name="infinity">&#8734;</string>
    <string name="estimation_solar_panel_title">Solar panel</string>
    <string name="estimation_walking_title">Walk</string>
    <string name="estimation_cycling_title">Cycle</string>
    <string name="estimation_electric_car_title">Electric car</string>
    <string name="carbon_footprint_name">Carbon footprint</string>
    <string name="carbon_footprint_unit">kgCO&#x2082;</string>
    <string name="carbon_footprint_default">-- kgCO&#x2082;</string>
    <string name="expenses_name">Expenses</string>
    <string name="expenses_unit">kr</string>
    <string name="expenses_explanation">The costs are a sum of your energy costs, your car fuel costs and the fixed costs your car produces, like insurance and value depreciation.</string>
    <string name="calories_name">Calories</string>
    <string name="calories_unit">kCal</string>
    <string name="calories_explanation">Your calorie consumption. The more you walk or cycle instead of driving, the more you will burn.</string>
    <string name="active_minutes_name">Active minutes</string>
    <string name="active_minutes_unit">min</string>
    <string name="active_minutes_explanation">Active minutes are minutes during the day that you are not sitting still. It is recommended that you are active for at least 30 minutes each day.</string>
    <string name="energy_consumption_name">Energy consumption</string>
    <string name="energy_consumption_unit">kWh</string>
    <string name="energy_consumption_explanation">The total amount of energy/heat your house needs in kWh. The outside temperature determines how much heat you will need to keep it warm.</string>
    <string name="distance_name">Driving distance</string>
    <string name="distance_unit">km</string>
    <string name="driving_explanation">This is the average distance you have driven in the given period.</string>
    <string name="information_co2_left_default">You have -- kgCO&#x2082; left!</string>
    <string name="information_co2_left_default2">-- kgCO&#x2082; left until you have exceeded the daily limit!</string>
    <string name="information_co2_left">You have %1$s kgCO&#x2082; left!</string>
    <string name="information_co2_left2">%1$s kgCO&#x2082; left until you have exceeded the daily limit!</string>
    <string name="information_savings">%1$s</string>
    <string name="information_days_left_solar_panel">%1$s days</string>
    <string name="information_own_energy">%1$s your own energy</string>
    <string name="app_name">Smiling Earth</string>
    <string-array name="time_spinner_array">
        <item>TODAY</item>
        <item>THIS WEEK</item>
        <item>THIS MONTH</item>
    </string-array>
    <string-array name="history_array">
        <item>Carbon footprint</item>
        <item>Transportation</item>
        <item>Energy consumption</item>
    </string-array>
    <string name="value_graph">value</string>
    <string name="explanation_graph">Scroll horizontally to view historical data</string>
    <string name="register_housing_description">The type of energy you use for heating and the efficiency of your heating system determine 80% of your carbon footprint from energy consumption. The building year and the year of the last renovation of the house, also affects the housing emissions.</string>
    <string name="register_transportation_description">Your vehicle is a major source of greenhouse gas emissions. Cycling or walking instead of driving will save you money, give you health benefits, and reduce your carbon footprint.</string>
    <string name="register_activity_description">Finally, to monitor your health gains </string>
    <string name="title_activity_welcome">Home Screen</string>
    <string name="next">NEXT</string>
    <string name="skip">SKIP</string>
    <string name="start">GOT IT</string>
    <string name="slide_1_title">Welcome!</string>
    <string name="slide_1_desc">The goal of this app is to make you more aware of how your daily habits and energy use affect the environment. The Earth is happy when you have a carbon footprint below 4 kgCO&#x2082; per day. If you cross the limit of 4 kgCO&#x2082;, the Earth´s mood and health changes accordingly.</string>
    <string name="slide_2_desc">The app does this by tracking your movement and automatically detecting whether you walk, cycle or drive a car. If the app detects that you are driving, the CO&#x2082; emission from the drive is calculated.</string>
    <string name="slide_3_desc">The app also checks the outside temperature where you live and calculates how much energy is needed to heat your home and how much CO&#x2082; are emitted to produce this amount of energy, based on heating type you have in your home.</string>
    <string name="slide_4_desc">The emissions from transportation and heating  are added to calculate your carbon footprint. This is visualized in the circular indicator around the Earth on the dashboard.</string>
    <string name="slide_5_desc">There are many benefits of choosing green transportation types to reduce your carbon footprint. In addition to help save the planet and meet the 2 degree goal of the United Nation, you can save money, and gain health benefits if you choose to walk or cycle instead of driving.</string>
    <string name="slide_6_desc">You can also reduce your emissions by changing to an electric car, or by installing a solar panel to provide your house with energy. Estimate how much you can save by clicking the estimation buttons at the bottom of the screen on the dashboard.</string>
    <string name="slide_7_desc">Collect Earth Coins by making green choices.</string>
    <string name="slide_8_desc">Connect with your neighbors and friends, and challenge each other on who can reduce their carbon footprint the most.</string>
    <string name="slide_9_desc">See your historic data and check to see if you change your behavior, or just to see how your emissions change throughout the day, week or month.                                                                                                                                                                                                                                                                                 </string>
    <string name="slide_10_title">Connect, compete, and take action with your friends, family and neighbors. Together we can build a healthier, happier planet!</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_home">Home</string>
    <string name="nav_history">History</string>
    <string name="nav_settings">Settings</string>
    <string name="nav_about_us">About Us</string>
    <string name="openDrawer">open_drawer</string>
    <string name="closeDrawer">close_drawer</string>
    <string-array name="nav_item_activity_titles">
        <item>Home</item>
        <item>Settings</item>
    </string-array>
    <string name="title_activity_settings">Settings</string>
    <string name="action_settings">Settings</string>
    <string name="pref_title_personal">Personal settings</string>
    <string name="pref_personal_name">Name</string>
    <string name="pref_personal_email">Email</string>
    <string name="pref_personal_password">Password</string>
    <string name="pref_personal_gender">Gender</string>
    <string name="pref_personal_age">Age</string>
    <string name="pref_personal_weight">Weight</string>
    <string name="pref_personal_dialog_name">Please enter your name</string>
    <string name="pref_personal_dialog_email">Please enter your email</string>
    <string name="pref_personal_dialog_password">Please enter your password</string>
    <string name="pref_personal_dialog_age">Please enter your age</string>
    <string name="pref_personal_dialog_weight">Please enter your weight</string>
    <string name="pref_personal_summary_name">Please enter your name</string>
    <string name="pref_personal_summary_email">Please enter your email</string>
    <string name="pref_personal_summary_password">Please enter your password</string>
    <string name="pref_personal_summary_age">Please enter your age</string>
    <string name="pref_personal_summary_weight">Please enter your weight</string>
    <string name="pref_title_heat">Primary heating system</string>
    <string-array name="pref_heat_type_list">
        <item>Electric (resistance)</item>
        <item>Heat pump</item>
        <item>Gas</item>
        <item>Oil</item>
        <item>Wood</item>
    </string-array>
    <string name="pref_heat_type">What type of heating do you have where you live?</string>
    <string name="pref_heat_efficiency">System efficiency (%)</string>
    <string name="pref_heat_fuel_cost">Fuel cost</string>
    <string name="pref_heat_prev_yr">Consumption last year</string>
    <string name="pref_key_heat_type">pref_key_heat_type</string>
    <string name="pref_key_heat_efficiency">pref_key_heat_efficiency</string>
    <string name="pref_key_heat_fuel_cost">pref_key_heat_fuel_cost</string>
    <string name="pref_key_heat_prev_yr">pref_key_heat_prev_yr</string>
    <string name="pref_dialog_heat_type">Please enter fuel type</string>
    <string name="pref_dialog_heat_efficiency">Please enter system efficiency</string>
    <string name="pref_dialog_heat_fuel_cost">Please enter fuel cost</string>
    <string name="pref_dialog_heat_prev_yr">Please enter consumption last year</string>
    <string name="pref_summary_heat_type">Please enter fuel type</string>
    <string name="pref_summary_heat_efficiency">Please enter system efficiency</string>
    <string name="pref_summary_heat_fuel_cost">Please enter fuel cost</string>
    <string name="pref_summary_heat_prev_yr">Please enter consumption last year</string>
    <string name="pref_default_heat_fuel_type">Electric (resistance)</string>
    <string name="pref_default_heat_efficiency">Please enter efficiency</string>
    <string name="pref_default_heat_fuel_cost">Please enter fuel cost</string>
    <string name="pref_default_heat_prev_yr">Please enter consumption for previous year</string>
    <string name="pref_title_car">Car settings</string>
    <string name="pref_car_owner">Car owner</string>
    <string name="pref_car_distance">Driving distance (yearly)</string>
    <string name="pref_car_regnr">License plate (Reg. nr.)</string>
    <string name="pref_car_fuel_consumption">Average consumption (litre pr. 10km)</string>
    <string name="pref_car_year_produced">Production year</string>
    <string name="pref_car_ownership_period">Planned duration of ownership</string>
    <string name="pref_car_price">Car value</string>
    <string name="pref_car_fuel">Fuel type</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_up">Sign up</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="reg_building_year">Building year:</string>
    <string name="reg_year_of_last_renovation">Year of last renovation:</string>
    <string name="reg_electric_resistance">Electric (resistance)</string>
    <string name="reg_heat_pump">Heat pump</string>
    <string name="reg_gas">Gas</string>
    <string name="reg_oil">Oil</string>
    <string name="reg_wood">Wood</string>
    <string name="reg_solar_panel">Solar panel</string>
    <string name="reg_change_profile_picture">Change profile picture</string>
    <string name="reg_name">Name</string>
    <string name="reg_address">Address</string>
    <string name="reg_zip_code">Zip Code</string>
    <string name="reg_city">City</string>
    <string name="reg_female">Female</string>
    <string name="reg_male">Male</string>
    <string name="reg_weight">Weight (kg)</string>
    <string name="reg_date_of_birth">Date of birth:</string>
</resources>