<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginBottom="5dp"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:orientation="vertical">
        <FrameLayout
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:padding="20dp"
            android:layout_gravity="center"
            android:background="@drawable/circular_button_selected"
            android:layout_marginBottom="10dp">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scaleY="1.3"
                android:scaleX="1.3"
                android:src="@drawable/ic_menu_home"
                android:tint="#ffffff"/>
        </FrameLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="14sp"
            android:gravity="center_horizontal"
            android:text="@string/register_housing_description"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="?android:attr/listDivider"
            android:layout_marginTop="5dp"/>

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="15sp"
            android:text="@string/reg_building_year"/>

        <Spinner
            android:layout_marginLeft="5dp"
            android:id="@+id/spinnerRenovation"
            android:layout_width="160dp"
            android:layout_height="wrap_content"
            />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <TextView
            android:textSize="15sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/reg_year_of_last_renovation"/>

        <Spinner
            android:id="@+id/spinnerBuilding"
            android:layout_width="160dp"
            android:layout_height="wrap_content"
            />

    </LinearLayout>

    <TextView
        android:layout_marginTop="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="15sp"
        android:text="@string/pref_heat_type"/>

    <RadioGroup
        android:id="@+id/radio_group_heating"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="5dp">
        <RadioButton
            android:id="@+id/radio_button_electric"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/reg_electric_resistance"/>
        <RadioButton
            android:id="@+id/radio_button_heat_pump"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/reg_heat_pump"/>
        <RadioButton
            android:id="@+id/radio_button_gas"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/reg_gas"/>
        <RadioButton
            android:id="@+id/radio_button_oil"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/reg_oil"/>
        <RadioButton
            android:id="@+id/radio_button_wood"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/reg_wood"/>
        <RadioButton
            android:id="@+id/radio_button_solar_panel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/reg_solar_panel"/>
    </RadioGroup>

</LinearLayout>