<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/content"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:padding="16dp">

    <ImageView
        android:id="@+id/profile_pic"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:scaleType="centerCrop"
        android:src="@drawable/earth"/>
    <LinearLayout
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/imageButton"
            android:layout_width="30dp"
            android:layout_height="30dp"
            app:srcCompat="@drawable/ic_menu_camera" />

        <TextView
            android:textSize="16sp"
            android:id="@+id/textViewChangePicture"
            android:text="@string/reg_change_profile_picture"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>



    <android.support.design.widget.TextInputLayout
        android:layout_width="300dp"
        android:layout_height="wrap_content">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:maxLines="1"
            android:id="@+id/nameInput"
            android:hint="@string/reg_name" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="300dp"
        android:layout_height="wrap_content">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/addressInput"
            android:maxLines="1"
            android:inputType="textPostalAddress"
            android:hint="@string/reg_address" />
    </android.support.design.widget.TextInputLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal">

        <android.support.design.widget.TextInputLayout
            android:layout_width="115dp"
            android:layout_height="wrap_content">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/zipcodeInput"
                android:maxLines="1"
                android:inputType="number"
                android:hint="@string/reg_zip_code" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="185dp"
            android:paddingLeft="20dp"
            android:layout_height="wrap_content">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/cityInput"
                android:inputType="text"
                android:maxLines="1"
                android:hint="@string/reg_city" />
        </android.support.design.widget.TextInputLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="15dp"
        android:orientation="horizontal">

        <RadioGroup
            android:id="@+id/radioGroup"
            android:layout_width="match_parent"
            android:layout_gravity="left"
            android:orientation="vertical"
            android:layout_height="wrap_content">

            <RadioButton
                android:id="@+id/rbFemale"
                android:text="@string/reg_female"
                android:textSize="18sp"
                android:textColor="@color/dark_grey"
                android:layout_marginBottom="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/dark_grey"
                android:textSize="18sp"
                android:id="@+id/rbMale"
                android:text="@string/reg_male"/>
        </RadioGroup>

        <android.support.design.widget.TextInputLayout
            android:paddingLeft="100dp"
            android:layout_gravity="right"
            android:layout_width="210dp"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/weightInput"
                android:inputType="number"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/reg_weight" />
        </android.support.design.widget.TextInputLayout>

    </LinearLayout>

    <TextView
        android:text="@string/reg_date_of_birth"
        android:textSize="18sp"
        android:paddingTop="15dp"
        android:layout_marginLeft="25dp"
        android:layout_gravity="left"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <DatePicker
        android:id="@+id/datePicker"
        android:scaleX="1.2"
        android:scaleY="1.2"
        android:calendarViewShown="false"
        android:datePickerMode="spinner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

    </DatePicker>

</LinearLayout>