<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_menu_home"
            android:title="@string/nav_home" />
        <item
            android:id="@+id/nav_history"
            android:icon="@drawable/ic_history_black_24dp"
            android:title="@string/nav_history" />

        <item
            android:id="@+id/nav_user_profile"
            android:title="User Profile"
            android:icon="@drawable/ic_account_circle_black_24dp"/>

        <item
            android:id="@+id/nav_friend_list"
            android:title="Friends"
            android:icon="@drawable/ic_group_black_24dp"/>

        <item
            android:id="@+id/nav_leaderboard"
            android:title="Leaderboard"
            android:icon="@drawable/ic_assessment_black_24dp"/>

        <item
            android:id="@+id/nav_call_to_arms"
            android:title="Challenges"
            android:icon="@drawable/ic_timer_black_24dp"/>

        <item
            android:id="@+id/nav_info_app"
            android:title="How does this app work?"
            android:icon="@drawable/ic_menu_info"/>

        <item
            android:id="@+id/nav_settings"
            android:title="@string/nav_settings"
            android:icon="@drawable/ic_menu_settings"/>

        <item
            android:id="@+id/nav_about_app"
            android:title="About"
            android:icon="@drawable/ic_bubble_chart_black_24dp"/>

        <item
            android:id="@+id/nav_log_out"
            android:title="Log Out"
            android:icon="@drawable/ic_clear_black_24dp"/>

    </group>
</menu>