<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.desent.desent.activities.LoginActivity">

    <!-- Login progress -->
   <ProgressBar
        android:id="@+id/login_progress"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:visibility="gone" />

    <ScrollView
        android:id="@+id/login_form"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <LinearLayout
            android:id="@+id/email_login_form"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center">

            <!--<Button
                android:id="@+id/btnSave"
                style="@style/Widget.AppCompat.Button"
                android:text="Save"
                android:textSize="16sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />-->

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Welcome!"
                android:textSize="20sp"
                android:layout_marginBottom="16dp"/>

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="140dp"
                android:layout_height="140dp"
                app:srcCompat="@drawable/earth1" />

            <TextView
                android:id="@+id/textView"
                android:layout_gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:layout_marginBottom="8dp"
                android:text="New user?" />

            <Button
                android:id="@+id/email_sign_up_button"
                style="@style/Widget.AppCompat.Button.Colored"
                android:background="@color/blue"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="40dp"
                android:text="@string/action_sign_up" />

            <TextView
                android:id="@+id/textView2"
                android:layout_gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:text="Already a user, sign in below" />

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <AutoCompleteTextView
                    android:id="@+id/email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/prompt_email"
                    android:textSize="16sp"
                    android:inputType="textEmailAddress"
                    android:maxLines="1"
                    android:singleLine="true" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="16sp"

                    android:hint="@string/prompt_password"
                    android:imeActionId="@+id/login"
                    android:imeActionLabel="@string/action_sign_in_short"
                    android:imeOptions="actionUnspecified"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:layout_marginBottom="8dp"
                    android:singleLine="true"
                    tools:ignore="InvalidImeActionId" />
            </android.support.design.widget.TextInputLayout>

            <Button
                android:id="@+id/email_sign_in_button"
                style="@style/Widget.AppCompat.Button.Colored"
                android:background="@color/blue"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:text="@string/action_sign_in"/>
        </LinearLayout>
    </ScrollView>
</LinearLayout>
